--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,21 @@
 	background-color: #58a3e5;
 	cursor: pointer;
 }
+#option-list li button {
+	border: none;
+	background-color: white;
+}
+
+/* Estilo para el botón cuando está presionado */
+button:active {
+	border-color: white !important;
+}
+
+/* Estilo para el botón cuando tiene el foco */
+button:focus {
+	outline: none;
+	border-color: white !important;
+}
 
 #figure{
 	background-color: white;
@@ -44,3 +59,5 @@
 	background-color: rgba(255, 255, 255, 0.8);
 	color: black;
 }
+
+
