--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,67 @@
+body {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding-top: 5%;
+}
+
+canvas {
+	border: 1px solid black;
+}
+
+.main-container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+	padding-top: 5%;
+}
+
+.canvas-container {
+	border: 1px solid black;
+}
+
+.sidebar {
+	width: 200px;
+	height: 100vh;
+	background-color: #f8f9fa;
+	position: fixed;
+	left: 0;
+	top: 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	padding-top: 20px;
+}
+
+.sidebar ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.sidebar li {
+	margin-bottom: 10px;
+}
+
+.sidebar a {
+	color: black;
+	text-decoration: none;
+}
+
+.sidebar .logo {
+	font-size: 20px;
+	margin-bottom: 20px;
+}
+
+.sidebar .profile-pic {
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	object-fit: cover;
+}
 #option-list img {
 	max-width: 20px;
 	margin-right: 10%;
@@ -58,7 +122,6 @@ button:focus {
 	color: black;
 }
 
-
-
-
-
+#canvas-container{
+	position: relative;
+}
